[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Sohvi Puska <sohvip1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
